Merge from 0.9 branch at rev 327. Updated download page.